--- a/index.html
+++ b/index.html
@@ -8,50 +8,40 @@
     </head>
     <body>
         <header>
-            <h1>Antonin</h1>
-            <p>Étudiant / Passionné de nouvelles technologies</p>
+            <h1>Protect panthère</h1>
+            <p>Une association qui protège les panthères</p>
         </header>
 
         <main>
             <section id="a-propos">
-                <h2>À propos de moi</h2>
+                <h2>C'est quoi une panthère ?</h2>
                 <img
-                src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Tigre.jpg/1200px-Tigre.jpg"
+                src="https://media.istockphoto.com/id/1008719906/fr/photo/belle-panth%C3%A8re-noire-photo.jpg?s=612x612&w=0&k=20&c=ao_lyMdgRWR8KaO2UjPriRFoMVkObcuAgmfj8-rruBY="
                 alt="Une photo de moi, fin plutot de mon animal totem"
                 width="200"
                 />
                 <p>
-                Bonjour ! Je suis un élève de seconde passionné par
-                l'informatique et le design.
+                c’est une panthère noir. Tu ne me crois pas?! 
+Je ne dis que le vérité pourtant. Mais si je t’assure, nous protégeons cet animal. Ce sont des créatures simpatiques. Elles vivent prinpalement en Asie(Inde, Malaisie, Java: île la plus peuplé d’indonésie)
                 </p>
             </section>
             <section id="projets">
-                <h2>Mes Projets</h2>
-                <div class="cartes-projets-conteneur">
-                    <div class="carte">
-                        <h3>Projet 1 : Ce Portfolio</h3>
-                        <p>
-                            Un site personnel créé en HTML et CSS pour apprendre les bases du
-                             développement web
-                        </p>
-                    </div>
-                    <div class="carte">
-                        <h3>Projet 2 : Maquette de jeu </h3>
-                    <p>
-                        Conception d'une interface pour un jeu vidéo imaginaire sur Figma.
-                    </p>
-                </div>
-                <div class="carte">
-                    <h3>Projet 3 : A venir ...</h3>
-                    <p>Mon prochun projet sera plus ambitieux !</p>
-                </div>
-            </div>
+                <h2>Le créateur: Antonin ******</h2>
+                <img
+                src="https://plus.unsplash.com/premium_photo-1682096592504-5bc960bea6d7?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8aG9tbWUlMjBkJ2FmZmFpcmV8ZW58MHx8MHx8fDA%3D"
+                alt="Une photo de moi, fin plutot de mon animal totem"
+                width="200"
+                />
+                <p>
+                Il a créé cet association afin de gagner de l’argent. Il annonce gagner entre 10000$ et 12000$ par mois grace aux dons dont il reverse 2% a l’association. Il a d’ailleur ajouté qu’il n’aimait pas les animaux et qu’il adoré la viande et ne payait pas d’împots.
+                </p>
 
                 <!-- Nos projets viendront ici -->
             </section>
         </main>
         <footer>
-            <p>&copy; 2025 - Antonin. Site créé pendant l'atelier SUPINFO.</p>
+            <p>&copy; Contacter nous au 02 36 30 36 30 (20$ la minute)                                           
+                2025 - Antonin. Site créé pendant l'atelier SUPINFO.</p>
         </footer>
     </body>
 </html>
