correction faute d'ortographe

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Je ne dis que le vérité pourtant. Mais si je t’assure, nous protégeons cet 
                 width="200"
                 />
                 <p>
-                Il a créé cet association afin de gagner de l’argent. Il annonce gagner entre 10000$ et 12000$ par mois grace aux dons dont il reverse 2% a l’association. Il a d’ailleur ajouté qu’il n’aimait pas les animaux et qu’il adoré la viande et ne payait pas d’împots.
+                Il a créé cet association afin de gagner de l’argent. Il annonce gagner entre 10000$ et 12000$ par mois grace aux dons dont il reverse 2% a l’association. Il a d’ailleur ajouté qu’il n’aimait pas les animaux et qu’il adorait la viande et ne payait pas d’împots.
                 </p>
 
                 <!-- Nos projets viendront ici -->
