--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 />
                 <p>
                 c’est une panthère noir. Tu ne me crois pas?! 
-Je ne dis que le vérité pourtant. Mais si je t’assure, nous protégeons cet animal. Ce sont des créatures simpatiques. Elles vivent prinpalement en Asie(Inde, Malaisie, Java: île la plus peuplé d’indonésie)
+Je ne dis que le vérité pourtant. Mais si je t’assure, nous protégeons cet animal. Ce sont des créatures sympatiques. Elles vivent prinpalement en Asie(Inde, Malaisie, Java: île la plus peuplé d’indonésie)
                 </p>
             </section>
             <section id="projets">
