--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
         <header>
             <h1>Protect panthère</h1>
             <p>Une association qui protège les panthères</p>
+             <img
+                src="https://media.istockphoto.com/id/1560920803/fr/vectoriel/mains-humaines-et-patte-danimal-de-compagnie.jpg?s=612x612&w=0&k=20&c=eg6pI6wDNCDdbz128Xs1Ik3UePEn2iHHJrC_jxM7O3s="
+                alt="tkt"
+                width=100
+                />
         </header>
 
         <main>
@@ -33,7 +38,7 @@ Je ne dis que le vérité pourtant. Mais si je t’assure, nous protégeons cet 
                 width="200"
                 />
                 <p>
-                Il a créé cet association afin de gagner de l’argent. Il annonce gagner entre 10000$ et 12000$ par mois grace aux dons dont il reverse 2% a l’association. Il a d’ailleur ajouté qu’il n’aimait pas les animaux et qu’il adorait la viande et ne payait pas d’împots.
+                Il a créé cet association afin de gagner de l’argent. Il annonce gagner entre 10000$ et 12000$ par mois grace aux dons dont il reverse 2% a l’association. Il a d’ailleur ajouté qu’il n’aimait pas les animaux et qu’il adorait la viande. Il ne paie pas ses împots.
                 </p>
 
                 <!-- Nos projets viendront ici -->
